ok - all the game logic is rebuilt and running great. Just need to build the ed game logic now.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -124,6 +124,11 @@ section {
     line-height: 1.4em;
 }
 
+.red-text {
+    color: rgb(180, 0, 0);
+    font-weight: 800;
+}
+
 #score {
     background-color: #40798c;
     color: aliceblue;
